# advent_of_code_2022

./: Cargo.toml  README.md
data/: day1.txt  day10  day11  day2.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
day1/: Cargo.toml
day1/src/: calorie_counting.rs  main.rs
day1/tests/: calorie_counting_test.rs
day10/src/: cathode_ray_tube.rs  main.rs
day11/src/: lib.rs  main.rs  monkey.rs  monkey_in_the_middle.rs  operation.rs  test.rs  troup.rs
day12/: Cargo.toml
day12/src/: altitude.rs  atlas.rs  lib.rs  main.rs
day2/: Cargo.toml
day2/src/: main.rs  rock_paper_scissors.rs
day2/tests/: rock_paper_scissors_test.rs
day3/: Cargo.toml
day3/src/: main.rs  rucksack_reorganization.rs
day4/: Cargo.toml
day4/src/: camp_cleanup.rs  main.rs
day5/: Cargo.toml
day5/src/: main.rs  supply_stacks.rs
day6/src/: main.rs  tuning_trouble.rs
day7/src/: lib.rs  main.rs  no_space_left_on_device.rs
day8/src/: main.rs  treetop_tree_house.rs
day9/src/: lib.rs  main.rs  rope_bridge.rs
input_reader/src/: lib.rs
src/: day1_calorie_counting.rs  lib.rs  main.rs
tests/: day1_calorie_counting_test.rs
