[workspace]
resolver = "2"

members = [
  "day1",
  "day2",
  "day3",
  "day4",
  "day5",
  "day6",
  "day7",
  "day8",
  "day9",
  "day10",
  "day11",
  "day12",
]

default-members = ["day12"]

[workspace.package]
version = "0.12.0"
authors = ["Spencer Dent <mr.spencerdent@gmail.com>"]
description = "Code kata advent calendar solutions for 2022"
edition = "2021"
